[package]
name = "water"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
name = "water_app"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "water"
path = "src/main.rs"

[dependencies]
nightshade = "0.56.0"
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = ["tracing"]
steam = ["nightshade/steam"]
tracing = ["nightshade/tracing"]

[profile.wasm-release]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
